update index user
